# rando-facto

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
src/rando_facto/: __init__.py  console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
