[tool.poetry]
name = "rando-facto"
version = "0.1.0"
description = "Display random facts from wikipedia"
authors = ["Adam Reid <adam.reid@navblue.aero>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adamreid/rando-facto"
repository = "https://github.com/adamreid/rando-facto.git"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"
desert = "^2020.11.18"
marshmallow = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.4.0"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.0"
mypy = "^0.790"
pytype = {version = "^2020.12.23", python = "3.7"}
typeguard = "^2.10.0"
flake8-annotations = "^2.4.1"

[tool.poetry.scripts]
rando-facto = "rando_facto.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["rando_facto"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
